# slug2

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: closure_fun.py
slug2/: __init__.py  chunk.py  common.py  compiler.py  main.py  object.py  parser.py  token.py  vm.py
tests/: test_assignmnt.py  test_closure.py  test_parser.py  test_scopes.py  test_token.py  test_vm.py
